# x69

./: .CLANGD  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
doc/: str.md
src/: main.cpp  string.hpp
src/str/x69/: str.hpp
src/str/x69/private/: cable.inl  detail.inl  str.inl  txt.inl
src/str/x69/private/codec/: ASCII.inl  UTF16.inl  UTF32.inl  UTF8.inl
src/tst/x69/: tst.hpp
src/tst/x69/private/: tst.inl
src/x69/: string.hpp
src/x69/private/: cable.inl  detail.inl
src/x69/private/codec/: ASCII.inl  UTF16.inl  UTF32.inl  UTF8.inl
src/x69/private/model/: str.inl  txt.inl
test/str/: main.cpp  utf16be.txt  utf16le.txt
test/tst/: main.cpp
tests/: main.cpp
tools/: main.cpp
